# simplegmail

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
gmsa/: __init__.py  attachment.py  authentication.py  exceptions.py  gmail.py  label.py  message.py  query.py  utils.py
simplegmail/: gmail.py
tests/: test_query.py  test_utils.py
